22.ingress-ns/ingress-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ingress-ns
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ingress-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress 
  namespace: ingress-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: "web.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web 
            port:
              number: 80
